--- a/index2.html
+++ b/index2.html
@@ -26,16 +26,40 @@
             </div>
         </nav>
 
-    <div class="container-fluid">
-        <div class="card">
-            <div class="card-body">
-                <a href="https://cmadrid48.github.io/gitMovie/"><h5 class="card-title">gitMovie</h5></a>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <main id="featured-brands">
+      <div class="container">
+        <h1>Featured Apps</h1>
+        <div class="row">
+          <div class="col-md-4 featured-brand">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="./Assets/Images/Screen Shot 2023-02-06 at 8.38.59 PM.png"
+                alt="gitMovie"
+              />
+              <div class="card-body">
+                <h5 class="card-title">
+                  <a class="card-title" href="https://cmadrid48.github.io/gitMovie/">GitMovie</a>
+                </h5>
+              </div>
             </div>
-            <img src="Assets/Images/Screen Shot 2023-02-06 at 8.38.59 PM.png" class="card-img-bottom" alt="...">
-        </div>
-    </div>
-    </div>
+          </div>
+          <div class="col-md-4 featured-brand">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="./Assets/Images/Screenshot 2023-04-06 215542.png"
+                alt="waterWise"
+              />
+              <div class="card-body">
+                <h5 class="card-title">
+                  <a class="card-title" href="https://still-meadow-52918.herokuapp.com/">waterWise</a>
+                </h5>
+              </div>
+            </div>
+          </div>
+    </main>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js" integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="Assets/Js/main.js"></script>
