added last project

--- a/index2.html
+++ b/index2.html
@@ -58,6 +58,20 @@
               </div>
             </div>
           </div>
+          <div class="col-md-4 featured-brand">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="./Assets/Images/image_720.png"
+                alt="autoInsta"
+              />
+              <div class="card-body">
+                <h5 class="card-title">
+                  <a class="card-title" href="https://limitless-taiga-26718.herokuapp.com/"></a>
+                </h5>
+              </div>
+            </div>
+          </div>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js" integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
